<?xml version="1.0"?>
<package format="2">
    <name>coffee_nav</name>
    <version>0.1.0</version>
    <description>Navigation package using Fast-LIO for localization</description>
    <license>MIT</license>
    <maintainer email="user@example.com">User</maintainer>
    <author email="user@example.com">User</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>faster_lio</exec_depend>
    <exec_depend>map_server</exec_depend>
    <exec_depend>move_base</exec_depend>
    <exec_depend>global_planner</exec_depend>
    <exec_depend>teb_local_planner</exec_depend>
    <exec_depend>spatio_temporal_voxel_layer</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>clear_costmap_recovery</exec_depend>
    <exec_depend>rotate_recovery</exec_depend>
</package>
